# project-kinetile

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.infra.yml  docker-compose.yml  pom.xml
.github/workflows/: ci.yml  codeql.yml
dashboard-ui/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vitest.config.js
dashboard-ui/nginx/: default.conf
dashboard-ui/src/: App.tsx  main.tsx  vite-env.d.ts
dashboard-ui/src/api/: client.ts  devices.ts  hardwareConfig.ts  http.ts  infrastructure.ts  ledger.ts  locations.ts  tileMonitoringConfig.ts  timeseries.ts  validate.test.ts  validate.ts
dashboard-ui/src/components/: AppErrorBoundary.tsx  ContextNotice.tsx  DeviceFeasibilityCard.test.tsx  DeviceFeasibilityCard.tsx  ThemeControls.tsx
dashboard-ui/src/config/: apiBase.ts  (+3 more)
db-init/: Dockerfile  pom.xml
docs/screenshots/: .gitkeep
ingestion-service/: .env.example  Dockerfile  README.md  pyproject.toml
ingestion-service/src/ingestion_service/: __main__.py  emitter.py  firehose.py  kafka_settings.py  registry_builder.py  tile_catalog.py
ingestion-service/src/ingestion_service/data/: __init__.py
ingestion-service/src/ingestion_service/models/: __init__.py  tile_compression_event.py
ingestion-service/src/ingestion_service/simulation/: __init__.py  compression.py
ingestion-service/tests/: test_firehose.py  test_kafka_settings.py  test_registry_builder.py  test_tile_compression_event.py
physics-engine/: Dockerfile  README.md  pom.xml
(+183 files in other folders)
