[tool.poetry]
name = "ingestion-service"
version = "0.1.0"
description = "Project Kinetile ingestion service (Python -> Kafka)."
authors = ["Project Kinetile <dev@local>"]
readme = "README.md"
packages = [{ include = "ingestion_service", from = "src" }]

[tool.poetry.scripts]
ingestion-firehose = "ingestion_service.firehose:run_firehose"
ingestion-emitter = "ingestion_service.emitter:send_compression_demo"
registry-builder = "ingestion_service.registry_builder:main"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.13.2"
python-dotenv = "^1.2.2"
pydantic = "^2.10.0"
psycopg = { version = "^3.2.0", extras = ["binary"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.7.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
